--- a/A3-tutoriels.Rmd
+++ b/A3-tutoriels.Rmd
@@ -23,7 +23,7 @@ Après la mise à jour éventuelle du package, la liste des tutoriels vous est p
 Sélectionnez le tutoriel désiré dans la boite de dialogue (si lancée à partir de l'addin) ou entrez le numéro correspondant au tutoriel que vous voulez exécuter. Un document learnr interactif apparaît. Par exemple, en entrant `1` suivi de la touche `Entrée`, vous êtes redirigé vers le tutoriel concernant la découverte de R et intitulé `A00La_decouverte`.
 
 ```{block, type='warning'}
-L'onglet **Tutorial** donne également accès aux différents tutoriels, mais la liste n'est **pas** mise-à-jour automatiquement. **Vous devez donc vous assurer que cette liste correspond bien aux versions les plus récentes des exercices en ayant exécuté au moins une fois `BioDataScience1::run()` au cours de la session actuelle.** Ensuite, si une mise-à-jour a été installée, il faut aussi rafraîchir la liste des tutoriels présentés dans l'onglet **Turorial** en allant dans le menu `Session` -> `Restart R`.
+L'onglet **Tutorial** donne également accès aux différents tutoriels, mais la liste n'est **pas** mise-à-jour automatiquement. **Vous devez donc vous assurer que cette liste correspond bien aux versions les plus récentes des exercices en ayant exécuté au moins une fois `BioDataScience1::run()` au cours de la session actuelle.** Ensuite, si une mise-à-jour a été installée, il faut aussi rafraîchir la liste des tutoriels présentés dans l'onglet **Tutorial** en allant dans le menu `Session` -> `Restart R`.
 
 Dans certains cas, le lancement des tutoriels à partir de l'addin ou à partir de `BioDataScience1::run()` lance la compilation du tutoriel dans l'onglet **Jobs**, mais ce tutoriel ne s'affiche *pas* dans **Tutorial** ensuite. C'est un bug dans RStudio. Si c'est le cas, vous pouvez alors relacer le tutoriel à partir de l'onglet **Tutorial** en cliquant sur le bouton **Start Tutorial**, et normalement, il doit apparaître maintenant.
 ```
